Use th rails tags for image

--- a/app/views/users/_user.html.erb
+++ b/app/views/users/_user.html.erb
@@ -1,6 +1,6 @@
 <div class="block">
   <div class="photo">
-    <img src="<%= user.photo %>" height=55 width=55 alt=""/>
+    <%= image_tag(user.photo, size: "55") %>
   </div>
   <div class="row-part">
     <h3><%= link_to(user_path(user.id)) {user.name} %></h3>
