--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -2,6 +2,6 @@
 <% if @user.length > 0 %>
   <%= render @user %>
 <% else %>
-  <%= render html: '<p /><h1>There are no Users in the database</h1>'.html_safe %>
+  <%= render html: '<p /><h1>The database is empty.</h1>'.html_safe %>
 <% end %>
 </div>
