--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,1 +1,5 @@
-<h3><%= @message %></h3>
+<div class="post_div">
+  <%= render @user %>
+  <%= render @posts %>
+  <div class="row-center"><button>Pagination</button></div>
+</div>
