--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -1,5 +1,5 @@
 $font_family : 'Helvetica Neue',
-  Helvetica,
+  helvetica,
   arial,
   sans-serif;
 $width : 100%;
@@ -9,7 +9,6 @@ $num : 1rem;
 .post_div {
   font-family: $font_family;
 }
-
 
 .post_box {
   font-family: $font_family;
