Add link to access form for the new post

--- a/app/views/users/_user.html.erb
+++ b/app/views/users/_user.html.erb
@@ -7,3 +7,4 @@
     <p class="user_count"><%= render partial: 'users/count', object: user.posts_counter %></p>
   </div>
 </div>
+<%= link_to "Make new post", new_user_post_path(user.id), class:"new_post" %>
