--- a/app/views/comments/new.html.erb
+++ b/app/views/comments/new.html.erb
@@ -4,10 +4,9 @@
 
 <%= form_with model: @comment, url: user_post_comments_path, method: :POST  do |form|%>
   <div>
-    <%= form.label :text%> <br>
-    <%= form.text_area :text%>
+    <%= form.text_area :text, placeholder:"Comment our post", class:"form_text" %>
   </div>
 
-  <%= form.submit %>
+  <%= form.submit class:"form_btn" %>
 <%end%>
 </div>
