--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,17 +1,15 @@
-<div>
+<div class="form">
   <h1>New post</h1> 
   <%= form_with model: @post, url: user_posts_path do |form| %>
     <div>
-      <%= form.label :title %> <br>
-      <%= form.text_field :title %>
+      <%= form.text_field :title, placeholder:"Title", class:"form_title" %>
     </div>
 
     <div>
-      <%= form.label :text %> <br>
-      <%= form.text_area :text %>
+      <%= form.text_area :text, placeholder:"Post something", class:"form_text" %>
     </div>
 
-    <%= form.submit %>
+    <%= form.submit class:"form_btn" %>
   
   <%end%>
 </div>
