Update the comments from posts

--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -1,3 +1,5 @@
 <div>
-  <p class="comment_user"><%= comment.author.name %>: <span class="comment_text"><%= comment.text %></span></p>
+  if most_recent_comments.includes(:author).each do |comment|
+    <p class="comment_user"><%= comment.author.name %>: <span class="comment_text"><%= comment.text %></span></p>
+  end
 </div>
