create a description for the button

--- a/app/views/comments/new.html.erb
+++ b/app/views/comments/new.html.erb
@@ -7,6 +7,6 @@
     <%= form.text_area :text, placeholder:"Comment our post", class:"form_text" %>
   </div>
 
-  <%= form.submit class:"form_btn" %>
+  <%= form.submit "Add comment", class:"form_btn" %>
 <%end%>
 </div>
