Style the delete button

--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -111,6 +111,9 @@ $num : 1rem;
   padding: 0.25rem 1rem;
   color: #fff;
   background-color: #000;
+  cursor: pointer;
+  border: none;
+  margin: 0 0.5rem;
 }
 
 .column {
